syntax = "proto3";

option go_package = "../utils/proto/account";

import "google/api/annotations.proto";

//请求登录消息体
message LoginRequest {
  string account = 1;
  string password = 2;
  int32 direct = 3;
  int32 inviter = 4; // 企业 邀请者
  string departmentId = 5; // 企业部门发起邀请
}

message LoginAccount {
  string nickname = 1;
  string account = 2;
  string email = 3;
  string portrait = 4;
  repeated int32 roletypes = 5;
}

//请求登录消息体
message LoginResponse {
  int32 code = 1;
  string message = 2;
  repeated LoginAccount accountList = 3;
  string token = 4;
}

message UserPhoneRequest {
  string phone = 1;
}

message UserPhoneResponse {
  int32 code = 1;
  string message = 2;
}

message UserPhoneCodeRequest {
  string phone = 1;
  string code = 2;
  string departmentId = 3;
}

// 去掉body token 改成 header token
message UserLogOutRequest {
}

message UserLogOutResponse {
  int32 code = 1;
  string message = 2;
}

message GetChangePwdCodeRequest {
  string account = 1;
}

message GetChangePwdCodeResponse {
  int32 code = 1;
  string message = 2;
}

message CheckCodeRequest {
  string account = 1;
  string code = 2;
}

message CheckCodeResponse {
  int32 code = 1;
  string message = 2;
}

message ChangePwdCodeRequest {
  string account = 1;
  string code = 2;
  string newPwd = 3;
}

message ChangePwdCodeResponse {
  int32 code = 1;
  string message = 2;
}

message BypassAccountChangePWDRequest {
  string account = 1;
  string password = 2;
  string newPwd = 3;
}

message BypassAccountChangePWDResponse {
  int32 code = 1;
  string message = 2;
}

message GetEmailCodeRequest {
  string email = 1;
}


message GetEmailCodeResponse {
  int32 code = 1;
  string message = 2;
}

message CheckEmailRequest {
  string email = 1;
  string code = 2;
}

message CheckEmailResponse {
  int32 code = 1;
  string message = 2;
}

// 去掉body token 改成 header token
message AccountInfoRequest {
}

message AccountInfoResponse {
  int32 code = 1;
  string message = 2;
  AccountInfo info = 3;
}

message AccountInfo {
  int32  userType = 1;//用户类型 0:个人用户 1：企业用户 2：子账号用户
  string enterpriseName = 2; //企业名称
  int32 enterpriseId = 20; //企业id
  string address = 3; //企业地址
  string enterprisePhone = 4; //企业电话
  string license = 5; //企业营业执照地址
  string enterprisePortrait = 6; //企业头像地址
  string account = 7; //子账号
  string nickName = 8; //用户昵称
  string portrait = 9; //用户头像
  bool  root = 10;//判断是否为root账号，审核企业权限
  int32 roleType = 11;//角色类型
  repeated int32 menuFlag = 12; //菜单权限
  repeated int32 actionFlag = 13; //功能权限
  string roleName = 14; //角色名称
  int32 gender = 15; //性别 0-男 1-女
  int32 maxSpace = 16; //最大可创建空间数
  string userPhone = 17; //用户手机号码
  int32 userId = 21; //用户手机号码
  int32 userState = 18; // 用户账号状态
  int32 enterpriseState = 19; // 企业账号状态
}

service AccountHttp {
  //获取手机注册验证码
  rpc GetWebRegisterCode (UserPhoneRequest) returns (UserPhoneResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/getVerificationCode"
      body: "*"
    };
  }

  //手机注册验证码登录
  rpc WebSMSLogin (UserPhoneCodeRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/smsLogin"
      body: "*"
    };
  }

  //登录
  rpc WebLogin (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/login"
      body: "*"
    };
  }

  //退出登录
  rpc WebLogout (UserLogOutRequest) returns (UserLogOutResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/logout"
      body: "*"
    };
  }

   //获取修改密码验证码
   rpc GetChangePwdCode (GetChangePwdCodeRequest) returns (GetChangePwdCodeResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/changePwdCode"
      body: "*"
    };
  }

  //验证修改密码
  rpc CheckCode (CheckCodeRequest) returns (CheckCodeResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/checkcode"
      body: "*"
    };
  }

  //修改密码
  rpc ChangePwdCode (ChangePwdCodeRequest) returns (ChangePwdCodeResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/changePwd"
      body: "*"
    };
  }

  //获取邮箱验证码
  rpc GetEmailCode (GetEmailCodeRequest) returns (GetEmailCodeResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/getEmailCode"
      body: "*"
    };
  }

  //检测邮箱验证码是否正确
  rpc CheckEmail (CheckEmailRequest) returns (CheckEmailResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/register"
      body: "*"
    };
  }

  //检测邮箱验证码是否正确
  rpc BypassAccountChangePWD (BypassAccountChangePWDRequest) returns (BypassAccountChangePWDResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/bypassAccountChangePwd"
      body: "*"
    };
  }

   //token 鉴权
   rpc AccountInfo (AccountInfoRequest) returns (AccountInfoResponse) {
    option (google.api.http) = {
      post: "/v2/web/account/info"
      body: "*"
    };
  }
  
}




